# RNN-Trading-Bot

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  connection.h  exchange.cpp  exchange.h  main.cpp  net.cpp  net.h  neuron.cpp  neuron.h  training.cpp  training.h
pyTrader/: analyst.py  balances.py  db_access.py  file_check.py  info_track.py  print_trade_info.py  sqlite_output.py  trade_stream.py  trader.py  trading_floor.py
sqlite3/: CMakeLists.txt
